2005-09-14  Jan Kiszka <jan.kiszka@web.de>

	* configure.in: Fix handling of recent CONFIG_RTAI_OPT_CONFIG_GZ
	option.

	* drivers/16550A: Clear the internal error state after changing
	the serial line setup.

2005-09-12  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/config.c: Add support for wrapping the configuration
	file into the nucleus image (ala IKCONFIG).

	* skins/rtai/syscall.c (__rt_task_create): Propagate T_SUSP if
	present to the actual syscall.

 	* RELEASE: fusion-0.9.1 (Not Of This Earth)

2005-09-11  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos oldgen r13c3 and newgen
	1.0-02.

	* arch/ppc/patches: Upgrade to Adeos oldgen r8c4.

	* skins/rtai/syscall.c (__rt_queue_bind, __rt_heap_bind): Check
	whether we actually run in primary mode before attempting to relax
	the caller.
	__rt_heap_alloc: Make conforming.

	* skins/rtai/heap.c (__heap_read_proc): Swap used and total size
	values.

	* include/nucleus/asm-i386/hal.h (rthal_timer_program_shot): Kick
	the timer IRQ immediately upon null delay using the HAL's internal
	interrupt trigger service.

2005-09-09  Philippe Gerum  <rpm@xenomai.org>

	* skins/posix/demos/accuracy.c (threadB): Fix sem_wait() arg.

	* fusion: Makefile.kbuild -> Kbuild; remove top and bottom Kbuild
	commands.

	* fusion/makefile: Rename srctree to fusion_srctree to prevent
	conflicts with Kbuild.

2005-09-06  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.9 (Ice Nice)

2005-09-06  Heikki Lindholm <holindho@cs.helsinki.fi>
	
	* skins/posix/lib/wrappers.c: Solve shared lib issues with the
	--wrap directive.
	
2005-09-06  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add initial release of the next generation
	Adeos support.

	* drivers/16550A/16550A.c: Include missing asm/io.h.

	* skins/posix/lib/GNUmakefile.am (libpthread_rt_la_LDFLAGS):
	Remove spurious wrapping flags.

	* skins/posix/demos/accuracy.c (threadA, threadB): Make sem_wait()
	check for errors.
